feat: local run, string interpolation

--- a/introduction/quick-start.mdx
+++ b/introduction/quick-start.mdx
@@ -2,8 +2,8 @@
 title: "Quick Start"
 ---
 
-We will assume that you have already installed shuttle. If you haven't, you can
-take a look on how to in our [installation](installation) section.
+We will assume that you have already installed shuttle. If you haven't, you should
+check out our [installation](./installation) section.
 
 To initialize your project, simply write:
 
@@ -23,11 +23,7 @@ And to deploy it:
 cargo shuttle deploy
 ```
 
-Or try it out locally (local runs with databases require [Docker](https://docs.docker.com/get-docker/)):
-```sh
-cargo shuttle run
-```
-And that's... it.
+You can also run your project locally for development, check out our [local run](./local-run) section.
 
 Feel free to build on-top of the generated `hello-world` example or take a stab
 at one of our [examples](../examples/axum).
