--- a/introduction/shuttle-commands.mdx
+++ b/introduction/shuttle-commands.mdx
@@ -17,6 +17,7 @@ cargo shuttle help
 | delete     |  delete this shuttle service                              |
 | deploy     |  deploy a shuttle service                                 |
 | deployment |  manage deployments of a shuttle service                  |
+| feedback   |  open the create new issue page on the shuttle github     |
 | generate   |  generate shell completions                               |
 | help       |  Print this message or the help of the given Subcommand(s)|
 | init       |  create a new shuttle service                             |
