docs: add note about firewall

--- a/introduction/local-run.mdx
+++ b/introduction/local-run.mdx
@@ -41,6 +41,9 @@ This will bind your local application to `0.0.0.0:8000`, and you will now be abl
 using your computer's local IP. If you'd also like to change the port, you can do so with the `--port`
 argument:
 
+
 ```bash
 cargo shuttle run --external --port 8123
 ```
+
+*PS: you may need to open the port your app is started on in your firewall.*
