--- a/resources/shuttle-shared-db.mdx
+++ b/resources/shuttle-shared-db.mdx
@@ -18,6 +18,16 @@ Add `shuttle-shared-db` to the dependencies for your service. Every type of shar
 |-----------|------|----------|---------------------------------------------------------------------------------------------------------|
 | local_uri | str  | `None`   | Rather connect `cargo shuttle run` to this database and don't spin up a Docker instance of the database |
 
+When setting the `local_uri` you can also insert secrets from `Secrets.toml` using string interpolation. To insert the
+`PASSWORD` secret, pass it in like this:
+
+```rust
+#[shuttle_service::main]
+async fn poem(#[shuttle_shared_db::Postgres(
+        local_uri = "postgres://postgres:{secrets.PASSWORD}@localhost:16695/postgres"
+    )] pool: PgPool) -> shuttle_service::ShuttlePoem<impl poem::Endpoint> { ... }
+```
+
 ## Example
 The shuttle poem main function below uses the `[shuttle_shared_db::Postgres]` attribute macro to provision a shared postgres database,
 which can be accessed using a pre-configured, authenticated [sqlx Pool](https://docs.rs/sqlx/latest/sqlx/pool/index.html).
