--- a/introduction/shuttle-commands.mdx
+++ b/introduction/shuttle-commands.mdx
@@ -14,7 +14,7 @@ cargo shuttle help
 
 | Command    |                      Explanation                          |
 |----------  |--------------                                             |
-| delete     |  delete this shuttle service                              |
+| stop       |  stop the currently running deployment                    |
 | deploy     |  deploy a shuttle service                                 |
 | deployment |  manage deployments of a shuttle service                  |
 | feedback   |  open the create new issue page on the shuttle github     |
@@ -22,6 +22,7 @@ cargo shuttle help
 | help       |  Print this message or the help of the given Subcommand(s)|
 | init       |  create a new shuttle service                             |
 | login      |  login to the shuttle platform                            |
+| logout     |  logout from the shuttle platform                         |
 | logs       |  view the logs of deployment in this shuttle service      |
 | project    |  manage a project on shuttle                              |
 | run        |  run a shuttle service locally                            |
