--- a/resources/shuttle-secrets.mdx
+++ b/resources/shuttle-secrets.mdx
@@ -11,6 +11,14 @@ with the secrets you'd like to store. Make sure to add `Secrets.toml` to a `.git
 Next, pass `#[shuttle_secrets::Secrets] secret_store: SecretStore` as an argument to your `shuttle_service::main` function.
 `SecretStore::get` can now be called to retrieve your API keys and other secrets at runtime.
 
+## Local secrets
+When developing locally with `cargo shuttle run`, you can use a different set of secrets. If you add a `Secrets.dev.toml` to the
+root of your project, these secrets will be used for local runs. The `Secrets.dev.toml` file will *only* be used for local runs.
+
+If you don't have a `Secrets.dev.toml` file, `Secrets.toml` will be used locally as well as for deployments. If you want to have
+both secret files with some of the same secrets for both local runs and deployments, you have to duplicate the secret across both 
+files.
+
 ## Example
 This snippet shows a shuttle rocket main function that uses the `shuttle_secrets::Secrets` attribute to gain access to a `SecretStore`.
 
