--- a/introduction/what-is-shuttle.mdx
+++ b/introduction/what-is-shuttle.mdx
@@ -18,13 +18,17 @@ It is built for productivity, reliability and performance:
   [Infrastructure-From-Code](https://github.com/shuttle-hq/examples/tree/main/rocket/hello-world)
 - First-class support for popular Rust frameworks -
   [Rocket](https://github.com/shuttle-hq/examples/tree/main/axum/hello-world),
+  [Actix](https://github.com/shuttle-hq/examples/tree/main/actix-web/hello-world),
   [Axum](https://github.com/shuttle-hq/examples/tree/main/axum/hello-world),
-  [Tide](https://github.com/shuttle-hq/examples/tree/main/tide/hello-world),
-  [Poem](https://github.com/shuttle-hq/examples/tree/main/poem/hello-world)
-  and
+  [Warp](https://github.com/shuttle-hq/examples/tree/main/warp/hello-world),
   [Tower](https://github.com/shuttle-hq/examples/tree/main/tower/hello-world)
+  [Salvo](https://github.com/shuttle-hq/examples/tree/main/salvo/hello-world),
+  [Poem](https://github.com/shuttle-hq/examples/tree/main/poem/hello-world)
+  and [Tide](https://github.com/shuttle-hq/examples/tree/main/tide/hello-world),
+  
 - Support for deploying Discord bots using
-  [Serenity](https://github.com/shuttle-hq/examples/tree/main/serenity/hello-world)
+  [Serenity](https://github.com/shuttle-hq/examples/tree/main/serenity/hello-world) or
+  [Poise](https://github.com/shuttle-hq/examples/tree/main/poise/hello-world)
 - Scalable hosting (with optional self-hosting)
 
 ## Infrastructure from Code
