added info re: git & minor changes

--- a/support/troubleshooting.mdx
+++ b/support/troubleshooting.mdx
@@ -1,6 +1,8 @@
 ---
-title: "Frequently Asked Questions"
+title: "Troubleshooting"
 ---
+
+This section is aimed at collecting common issues users have to provide quick debug solutions.
 
 <AccordionGroup>
   <Accordion title="I've updated shuttle and my project isn't working anymore.">
@@ -38,3 +40,6 @@ title: "Frequently Asked Questions"
   </Accordion>
 </AccordionGroup>
 
+### Other issues?
+
+Hop on over to [our Discord server](https://github.com/shuttle-hq/shuttle), we are very responsive!
