--- a/examples/actix.mdx
+++ b/examples/actix.mdx
@@ -1,8 +1,7 @@
 ---
-title: "Salvo"
+title: "Actix"
 description:
-  "Salvo is an extremely simple and powerful Rust web backend framework. Only
-  basic Rust knowledge is required to develop backend services."
+  "Actix Web is a powerful, pragmatic, and extremely fast web framework for Rust."
 ---
 
 > ❗️ Actix currently segfaults on arm64 machines when trying to run locally. In order to "bypass" this,
