--- a/examples/custom-service.mdx
+++ b/examples/custom-service.mdx
@@ -65,11 +65,7 @@ pub struct CustomService {
 Then we need to implement `shuttle_service::Service` for our wrapper. If you need to bind to an address,
 for example if you're implementing service for an HTTP server, you can use the `addr` argument from `bind`.
 You can only have one HTTP service bound to the `addr`, but you can start other services that don't rely on 
-binding to a socket.
-
-We can do do this by simply adding an implementation for our wrapper struct containing a function called `start`,
-which will contain all of our tasks that we want to run and simply run them all together in one `tokio::select!` macro
-(currently, this code doesn't work due to no base implementation - we will implement this later on):
+binding to a socket, like so:
 
 ```rust lib.rs
 #[shuttle_service::async_trait]
