added ss to article

--- a/tutorials/websocket-chat-app-js.mdx
+++ b/tutorials/websocket-chat-app-js.mdx
@@ -10,6 +10,8 @@ With Rust going from strength to strength within the web development space, it i
 
 Let's explore Rust in everyday usage by creating a Typescript React app and combining it with a Rust API that uses WebSockets. While node.js is quick to set up, doesn't require context switching and is easy to use if you already have Javascript knowledge from learning it for writing front-end web apps, you don't need to have a high level of knowledge in Rust to get started writing competent web services that can easily carry out whatever you need.
 
+![screenshot](https://github.com/joshua-mo-143/react-websocket-chat-rust/raw/master/Screenshot.png)
+
 ### Initial setup
 
 We will be using Vite to scaffold our project, as it's a quick and fast bundler for starting up your development environment quickly as well as being less opinionated than create-react-app. Let's get into it:
