--- a/examples/warp.mdx
+++ b/examples/warp.mdx
@@ -22,15 +22,13 @@ name = "hello-world"
 version = "0.1.0"
 edition = "2021"
 
-[lib]
-
 [dependencies]
 shuttle-service = { version = "0.11.0", features = ["web-warp"] }
 warp = "0.3.2"
 ```
-Your `lib.rs` should look like this:
+Your `main.rs` should look like this:
 
-```Rust lib.rs
+```Rust main.rs
 use warp::Filter;
 use warp::Reply;
 
