--- a/examples/poem.mdx
+++ b/examples/poem.mdx
@@ -23,15 +23,13 @@ name = "hello-world"
 version = "0.1.0"
 edition = "2021"
 
-[lib]
-
 [dependencies]
 poem = "1.3.35"
 shuttle-service = { version = "0.11.0", features = ["web-poem"] }
 ```
-Your `lib.rs` should look like this:
+Your `main.rs` should look like this:
 
-```Rust lib.rs
+```Rust main.rs
 use poem::{get, handler, Route};
 
 #[handler]
@@ -84,9 +82,9 @@ shuttle-service = { version = "0.11.0", features = ["web-poem"] }
 shuttle-shared-db = { version = "0.11.0", features = ["mongodb"] }
 ```
 
-Your `lib.rs` should look like this:
+Your `main.rs` should look like this:
 
-```Rust lib.rs
+```Rust main.rs
 use mongodb::bson::doc;
 use mongodb::bson::oid::ObjectId;
 use mongodb::{Collection, Database};
@@ -190,7 +188,6 @@ name = "postgres"
 version = "0.1.0"
 edition = "2021"
 
-[lib]
 
 [dependencies]
 poem = "1.3.35"
@@ -200,9 +197,9 @@ shuttle-shared-db = { version = "0.11.0", features = ["postgres"] }
 sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
 ```
 
-Your `lib.rs` should look like this:
+Your `main.rs` should look like this:
 
-```Rust lib.rs
+```Rust main.rs
 use poem::{
     error::BadRequest,
     get, handler,
