--- a/examples/tower.mdx
+++ b/examples/tower.mdx
@@ -23,16 +23,14 @@ name = "hello-world"
 version = "0.1.0"
 edition = "2021"
 
-[lib]
-
 [dependencies]
 hyper = { version = "0.14", features = ["full"] }
 shuttle-service = { version = "0.11.0", features = ["web-tower"] }
 tower = { version = "0.4", features = ["full"] }
 ```
-Your `lib.rs` should look like this:
+Your `main.rs` should look like this:
 
-```Rust lib.rs
+```Rust main.rs
 use std::convert::Infallible;
 use std::future::Future;
 use std::pin::Pin;
