--- a/resources/shuttle-persist.mdx
+++ b/resources/shuttle-persist.mdx
@@ -10,7 +10,7 @@ Add `shuttle-persist` to the dependencies for your service. You can get this res
 ## Example
 This snippet shows a shuttle rocket main function that uses the `shuttle_persist::Persist` attribute to provision and get access to a `PersistInstance`.
 
-```rust lib.rs
+```rust main.rs
 #[shuttle_service::main]
 async fn rocket(
     #[shuttle_persist::Persist] persist: PersistInstance,
