--- a/resources/shuttle-secrets.mdx
+++ b/resources/shuttle-secrets.mdx
@@ -22,7 +22,7 @@ files.
 ## Example
 This snippet shows a shuttle rocket main function that uses the `shuttle_secrets::Secrets` attribute to gain access to a `SecretStore`.
 
-```rust lib.rs
+```rust main.rs
 #[shuttle_service::main]
 async fn rocket(
     #[shuttle_secrets::Secrets] secret_store: SecretStore,
