--- a/tutorials/serverless-calendar-app.mdx
+++ b/tutorials/serverless-calendar-app.mdx
@@ -104,7 +104,6 @@ and I was greeted with everything I needed to get started:
 
 ```rust
 use axum::{routing::get, Router};
-use sync_wrapper::SyncWrapper;
 
 async fn hello_world() -> &'static str {
   "Hello, world!"
@@ -113,9 +112,8 @@ async fn hello_world() -> &'static str {
 #[shuttle_service::main]
 async fn axum() -> shuttle_service::ShuttleAxum {
   let router = Router::new().route("/hello", get(hello_world));
-  let sync_wrapper = SyncWrapper::new(router);
 
-  Ok(sync_wrapper)
+  Ok(router)
 }
 ```
 
