--- a/tutorials/websocket-chat-app-js.mdx
+++ b/tutorials/websocket-chat-app-js.mdx
@@ -223,15 +223,10 @@ For the back end part, because we'll be serving the web server through shuttle, 
 cargo install cargo-shuttle
 ```
 
-You can also use binstall to install cargo-shuttle, like so:
+You can also use [`cargo-binstall`](https://github.com/cargo-bins/cargo-binstall) to install cargo-shuttle:
 
 ```bash
-// linux
-cargo binstall cargo-shuttle --pkg-url="https://github.com/shuttle-hq/shuttle/releases/download/v0.9.0/cargo-shuttle-v0.9.0-8-gf75c2e9-<target>.tar.gz" --bin-dir="shuttle/cargo-shuttle" --pkg-fmt="tgz"
-
-// Use the command below if you use windows:
-cargo binstall cargo-shuttle --pkg-url="https://github.com/shuttle-hq/shuttle/releases/download/v0.9.0/cargo-shuttle-v0.9.0-8-gf75c2e9-<target>.tar.gz" --bin-dir="shuttle/cargo-shuttle.exe" --pkg-fmt="tgz"
-
+cargo binstall cargo-shuttle\
 ```
 
 The installation may take a while depending on your Internet connection, so feel free to grab a drink while you wait. You will also want to log onto their website here through GitHub and make sure you have your API key as you will need to log in on the CLI with your key before you can make any projects.
@@ -262,9 +257,9 @@ hyper = { version = "0.14", features = ["client", "http2"] }
 hyper-tls = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-shuttle-secrets = "0.11.0"
-shuttle-service = { version = "0.11.0", features = ["web-axum"] }
-shuttle-static-folder = "0.11.3"
+shuttle-secrets = "0.12.0"
+shuttle-service = { version = "0.12.0", features = ["web-axum"] }
+shuttle-static-folder = "0.12.0"
 sync_wrapper = "0.1"
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.3.5", features = ["fs", "auth"]}
